# local-kubernetes-infra

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .prettierignore  Dockerfile  README.md  docker_build.sh  docker_entrypoint.template.sh  reset.sh  start.sh
.devcontainer/: .gitignore  Dockerfile  Dockerfile.docker-amd64  devcontainer.template.json  generate.sh  readme.md  shellrc.sh
certificates/: .gitignore  compute_ca_certificate.sh  copy_certificates_to_minikube.sh  readme.md  retrieve_system_certificates.sh
dkd/: .dockerignore  Dockerfile  README.md  docker-build.sh  logging.yaml  pyproject.toml
dkd/dkd/: fastapi_constants.py  fastapi_log.py  fastapi_security.py  main.py
docker/: Dockerfile  docker-build.sh  entrypoint.sh
docker-compose/: docker-compose-ssl.yaml  docker-compose.yaml  generate_certificates.sh  generate_mk_certificates.sh
exercice/: 01_certificates.md  02_docker.md  03_gitea.md  04_services.md  05_kubernetes_overview.md  06_minikube.md  07_kind.md  08_flux.md  09_argocd.md  10_harness.md  flux.md  helm.md  readme.sh
helm/: .helmignore  Chart.yaml  readme.md  values.yaml
scripts/: argocd_apply_certificates.sh  build_helm.sh  check_external_secret.sh  common.sh  flux_apply_certificates.sh  flux_create_components.sh  flux_create_playground.sh  flux_migrate.sh  flux_setup_tenants.sh  grc.logrus.conf  init_dkd.sh  setup_argocd.sh  setup_cluster_access.sh  setup_deps.sh  setup_dkd.sh  setup_dnsmasq.sh  setup_docker_compose_services.sh  setup_docker_registry.sh  setup_flux.sh  (+8 more)
secret-vault/secret-handler/: pyproject.toml
secret-vault/secret-handler/secret_handler/: aws_secret_manager.py  gcp_secret_manager.py  main.py
(+439 files in other folders)
