[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "secret-handler"
version = "0.1.0"
description = ""
authors = [ "author",]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
google-cloud-secret-manager = "^2.21.1"
google-crc32c = "^1.6.0"
boto3 = "^1.35.71"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
secret-handler = "secret_handler.main:main"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
